--- a/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
+++ b/New-Car-Loan/src/app/features/vehicle-details/components/vehicle-form/vehicle-form.html
@@ -164,47 +164,21 @@
                 </div>
                 <!-- Note -->
                 <div class="note-block note-box">
-                    <span class="note-icon" aria-hidden="true">
-                        <svg width="16" height="16" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path
-                                d="M7.01037 1.42188C7.01037 1.55312 6.92179 1.64062 6.78893 1.64062C6.65606 1.64062 6.56749 1.53125 6.56749 1.42188V0.21875C6.56749 0.0875 6.65606 0 6.78893 0C6.92179 0 7.01037 0.0875 7.01037 0.21875V1.42188Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M10.3763 4.28751C9.68979 2.80001 8.22828 1.94688 6.56747 2.01251C5.01738 2.07813 3.66659 3.01876 3.0687 4.46251C2.47081 5.88438 2.73654 7.48126 3.77731 8.61876C4.1759 9.05626 4.44163 9.58126 4.53021 10.1281C4.66307 10.0625 4.81808 10.0188 4.97309 10.0188H6.56747V7.74376L5.79242 6.97813C5.70385 6.89063 5.70385 6.75938 5.79242 6.67188C5.881 6.58438 6.01386 6.58438 6.10244 6.67188L6.78891 7.35001L7.51966 6.62813C7.60824 6.54063 7.74111 6.54063 7.82968 6.62813C7.91826 6.71563 7.91826 6.84688 7.82968 6.93438L7.01035 7.74376V9.99688H8.60473C8.75973 9.99688 8.8926 10.0188 9.02546 10.0844C9.11404 9.53751 9.35763 9.05626 9.75622 8.64063C10.8191 7.43751 11.0849 5.77501 10.3763 4.28751Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M9.13618 11.0031V11.5719C9.13618 11.8781 8.89259 12.1188 8.58258 12.1188H8.51614V12.2719C8.51614 13.2125 7.7411 14 6.76676 14C5.81456 14 5.01737 13.2344 5.01737 12.2719V12.1188H4.95094C4.64092 12.1188 4.39734 11.8781 4.39734 11.5719V11.0031C4.39734 10.6969 4.64092 10.4563 4.95094 10.4563H8.58258C8.89259 10.4344 9.13618 10.6969 9.13618 11.0031Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M4.17593 2.16562C4.24236 2.275 4.37522 2.29688 4.48594 2.25312C4.59666 2.1875 4.61881 2.05625 4.57452 1.94687L3.97663 0.91875C3.9102 0.809375 3.77733 0.7875 3.66661 0.83125C3.55589 0.896875 3.53375 1.02813 3.57804 1.1375L4.17593 2.16562Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M2.47082 4.00312L1.43005 3.4125C1.31932 3.34687 1.27504 3.21562 1.34147 3.10625C1.4079 2.99687 1.54077 2.95312 1.65149 3.01875L2.69226 3.60937C2.80298 3.675 2.84727 3.80625 2.78084 3.91562C2.7144 4.025 2.58154 4.06875 2.47082 4.00312Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M2.13866 6.2125C2.13866 6.08125 2.05009 5.99375 1.91722 5.99375H0.721441C0.588576 5.99375 0.5 6.08125 0.5 6.2125C0.5 6.34375 0.588576 6.43125 0.721441 6.43125H1.91722C2.05009 6.43125 2.13866 6.34375 2.13866 6.2125Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M1.43008 9.0125L2.47085 8.42187C2.58157 8.35625 2.71444 8.4 2.78087 8.50937C2.82516 8.61875 2.80301 8.75 2.69229 8.81562L1.65152 9.40625C1.5408 9.45 1.40793 9.42812 1.3415 9.31875C1.29721 9.20937 1.31936 9.07812 1.43008 9.0125Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M12.1478 9.03438L11.107 8.44375C10.9963 8.37813 10.8634 8.42188 10.797 8.53125C10.7306 8.64063 10.7749 8.77188 10.8856 8.8375L11.9264 9.42813C12.0371 9.49375 12.17 9.45 12.2364 9.34063C12.3028 9.20938 12.2585 9.07813 12.1478 9.03438Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M11.6607 5.99375H12.8564C12.9893 5.99375 13.1 6.08125 13.1 6.2125C13.1 6.34375 13.0114 6.43125 12.8786 6.43125H11.6607C11.5278 6.43125 11.4392 6.34375 11.4392 6.2125C11.4392 6.08125 11.5278 5.99375 11.6607 5.99375Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M11.107 4.00313L12.1478 3.4125C12.2585 3.34688 12.2806 3.21563 12.2364 3.10625C12.1921 2.99688 12.0371 2.975 11.9263 3.01875L10.8856 3.60938C10.7748 3.675 10.7527 3.80625 10.797 3.91563C10.8634 4.025 10.9963 4.06875 11.107 4.00313Z"
-                                fill="#1778EB" />
-                            <path
-                                d="M9.42412 2.16562C9.35768 2.275 9.22482 2.31875 9.1141 2.25312C9.00338 2.1875 8.95909 2.05625 9.02552 1.94687L9.62341 0.918746C9.68985 0.809371 9.82271 0.765621 9.93343 0.831246C10.0442 0.896871 10.0884 1.02812 10.022 1.1375L9.42412 2.16562Z"
-                                fill="#1778EB" />
-                        </svg>
-                    </span>
-                    <div class="note-text">
-                        <span>Please note:</span>
-                        <p> <span>The dealer list is populated as per the Pincode and brand you have entered.</span></p>
-                    </div>
+                    <table>
+                        <td>
+                            <img src="/assets/bulb-idea-electricity-innovation-offer.svg" alt="GST info"
+                                class="note-icon" />
+                        </td>
+                        <td>
+                            <div class="note-text">
+                                <span>Please note:</span>
+                                <p> <span>The dealer list is populated as per the Pincode and brand you have
+                                        entered.</span></p>
+                            </div>
+                        </td>
+                    </table>
+
+
                 </div>
                 <!-- Actions -->
                 <div class="form-actions">
